WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108973
Negative text indents can break RenderBlock's inline maximum preferred width calculation
https://bugs.webkit.org/show_bug.cgi?id=108973
Summary
Negative text indents can break RenderBlock's inline maximum preferred width ...
Levi Weintraub
Reported
2013-02-05 12:59:56 PST
This occurs when the negative text indent is larger than the line's inline minimum preferred width.
Attachments
Test case
(219 bytes, text/html)
2013-02-05 13:02 PST
,
Levi Weintraub
no flags
Details
Patch
(6.45 KB, patch)
2013-02-06 12:12 PST
,
Levi Weintraub
no flags
Details
Formatted Diff
Diff
Patch
(6.95 KB, patch)
2013-02-06 14:06 PST
,
Levi Weintraub
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Levi Weintraub
Comment 1
2013-02-05 13:02:30 PST
Created
attachment 186685
[details]
Test case
Levi Weintraub
Comment 2
2013-02-06 12:12:00 PST
Created
attachment 186891
[details]
Patch
Emil A Eklund
Comment 3
2013-02-06 13:20:34 PST
Comment on
attachment 186891
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=186891&action=review
Have you tested this for rtl content and with a negative margin-right?
> Source/WebCore/rendering/RenderBlock.cpp:5873 > + // Only gets added to the max preffered width once.
typo, s/preffered/preferred/
Levi Weintraub
Comment 4
2013-02-06 14:06:14 PST
Created
attachment 186916
[details]
Patch
WebKit Review Bot
Comment 5
2013-02-06 15:10:36 PST
Comment on
attachment 186916
[details]
Patch Clearing flags on attachment: 186916 Committed
r142042
: <
http://trac.webkit.org/changeset/142042
>
WebKit Review Bot
Comment 6
2013-02-06 15:10:39 PST
All reviewed patches have been landed. Closing bug.
Zan Dobersek
Comment 7
2013-02-07 00:23:25 PST
The layout test added in this patch is failing on GTK. Could the failure be caused by the subpixel layout being disabled? For reference, here's the expected and actual image output.
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r142063%20(34139)/fast/css/negative-text-indent-in-inline-block-diffs.html
Emil A Eklund
Comment 8
2013-02-07 06:50:05 PST
That looks like a subpixel alignment issue. The good news is that there is no line break though.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug